--- a/translationviewdraghelper/build.gradle
+++ b/translationviewdraghelper/build.gradle
@@ -23,3 +23,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v4:23.4.0'
 }
+
+apply from: 'https://raw.githubusercontent.com/Commit451/gradle-android-javadocs/1.0.0/gradle-android-javadocs.gradle'
