--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: "com.android.application"
-apply plugin: "kotlin-android-extensions"
 apply plugin: "kotlin-android"
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 32
 
     defaultConfig {
-        applicationId "com.commit451.betterviewdraghelper.sample"
+        applicationId "com.commit451.translationviewdraghelper.sample"
         minSdkVersion 14
-        targetSdkVersion 29
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
     }
@@ -24,7 +23,7 @@ android {
 }
 
 dependencies {
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version")
-    implementation("androidx.appcompat:appcompat:1.1.0")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
+    implementation("androidx.appcompat:appcompat:1.4.1")
     implementation(project(":translationviewdraghelper"))
 }
