--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,23 @@
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = "1.6.10"
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath "com.vanniktech:gradle-maven-publish-plugin:0.18.0"
     }
+}
+
+plugins {
+    id "com.github.ben-manes.versions" version "0.42.0"
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
