--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,27 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+android.useAndroidX=true
+
+GROUP=com.commit451
+POM_ARTIFACT_ID=translationviewdraghelper
+POM_PACKAGING=aar
+
+POM_NAME=TranslationViewDragHelper
+POM_DESCRIPTION=A version of ViewDragHelper which accounts for X and Y translations
+POM_INCEPTION_YEAR=2016
+POM_URL=https://github.com/Commit451/TranslationViewDragHelper/
+
+POM_LICENSE_NAME=The Apache Software License, Version 2.0
+POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENSE_DIST=repo
+
+POM_SCM_URL=https://github.com/Commit451/TranslationViewDragHelper/
+POM_SCM_CONNECTION=scm:git:git://github.com/Commit451/TranslationViewDragHelper/.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/Commit451/TranslationViewDragHelper/.git
+
+POM_DEVELOPER_ID=Commit451
+POM_DEVELOPER_NAME=Commit 451
+POM_DEVELOPER_URL=https://github.com/Commit451/
+
+VERSION_NAME=0.0.1
