--- a/translationviewdraghelper/src/main/AndroidManifest.xml
+++ b/translationviewdraghelper/src/main/AndroidManifest.xml
@@ -1,6 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.commit451.translationviewdraghelper">
-
-    <application />
-
-</manifest>
+    package="com.commit451.translationviewdraghelper"/>
