--- a/publish.gradle
+++ b/publish.gradle
@@ -1,3 +1,5 @@
+apply plugin: "com.vanniktech.maven.publish"
+
 mavenPublish {
     sonatypeHost = "S01"
     // We need this, because on Jitpack, we don't want the release to be signed,
