--- a/gradle.properties
+++ b/gradle.properties
@@ -39,4 +39,7 @@ POM_DEVELOPER_ID=Commit451
 POM_DEVELOPER_NAME=Commit 451
 POM_DEVELOPER_URL=https://github.com/Commit451/
 
+SONATYPE_CONNECT_TIMEOUT_SECONDS=60
+SONATYPE_CLOSE_TIMEOUT_SECONDS=900
+
 VERSION_NAME=0.0.1
